# Agent-Memory-Bridge

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  INSTALL_FOR_AGENTS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  glama.json  llms-install.md  llms.txt  pyproject.toml
benchmark/: README.md  adversarial-memory-cases.json  belief-activation-stress-pack.json  belief-reviewed-samples.json  classifier-reviewed-samples.json  latest-adversarial-memory-report.json  latest-calibration-report.json  latest-hybrid-retrieval-report.json  latest-memory-evolution-report.json  latest-procedure-governance-report.json  latest-proof-report.json  latest-report.json  latest-review-queue-report.json  latest-review-workflow-report.json  latest-signal-contention-report.json  latest-task-brief-report.json  latest-task-memory-report.json  latest-v0.19-adoption-proof-report.json  latest-v0.20-clean-room-proof-report.json  latest-v0.20-clean-room-proof-transcript.md  latest-v0.21-governed-change-report.json  memory-evolution-cases.json  procedure-governance-cases.json  questions.json  task-memory-cases.json  v0.19-fixture-manifest.json  v0.21-governed-change-manifest.json
docs/: AUTHORITY-CONTRACT.md  CLIENT-PROVENANCE.md  COMPARISON.md  CONFIGURATION.md  CONTEXT-ASSEMBLY.md  CONVERSATION-INGEST.md  HARNESS-DESIGN.md  INTEGRATIONS.md  MEMORY-TAXONOMY.md  MODEL-ROUTING.md  PRODUCTION-STATUS.md  PROMOTION-RULES.md  RELEASE-COMMUNICATIONS.md  ROADMAP.md  STARTUP-PROTOCOL.md  TRUST-BOUNDARY.md  v0.10.0-announcement.md  v0.11.0-announcement.md  v0.12.0-announcement.md  v0.12.1-announcement.md  v0.12.2-announcement.md  v0.13.0-announcement.md  v0.13.1-announcement.md  v0.14.0-announcement.md  v0.14.1-announcement.md  v0.14.2-announcement.md  v0.15.0-announcement.md  v0.16.0-announcement.md  v0.17.0-announcement.md  v0.18.0-announcement.md  v0.18.1-announcement.md  v0.19.0-announcement.md  v0.20-clean-room-proof.md  v0.20.0-announcement.md  v0.21.0-announcement.md  v0.21.1-announcement.md  v0.21.2-announcement.md  v0.22.0-announcement.md  v0.22.1-announcement.md  v0.22.2-announcement.md  (+12 more)
examples/: README.md
scripts/: apply_live_source_cutover.py  build_demo_cast.py  check_onboarding_contract.py  check_public_surface.py  check_release_contract.py  closeout_session.py  create_cole_archive_snapshot.py  create_profile_archive_snapshot.py  demo_terminal.py  demo_v0_5.py  import_cole_memory.py  import_profile_memory.py  install_startup_watcher.ps1  preview_task_memory.py  recall_first.py  rollback_live_source_cutover.py  run_activation_stress_pack.py  run_adversarial_benchmark.py  run_benchmark.py  run_classifier_calibration.py  run_deterministic_proof.py  run_healthcheck.py  run_mem_bridge_service.py  run_memory_evolution_benchmark.py  run_procedure_governance_benchmark.py  run_review_queue_benchmark.py  run_review_workflow_benchmark.py  run_signal_contention_benchmark.py  run_task_brief_benchmark.py  run_task_memory_benchmark.py  run_v019_adoption_proof.py  run_v020_clean_room_proof.py  run_v021_governed_change_proof.py  run_watcher_healthcheck.py  summarize_telemetry.py  sync_cole_source_root.py  sync_now.py  sync_profile_source_root.py  sync_session_notes.py  verify_stdio.py  (+2 more)
tests/: test_activation_stress.py  test_adversarial_benchmark.py  test_archive_snapshot.py  test_belief_observation.py  test_belief_replay.py  test_belief_review.py  test_benchmarking.py  test_calibration.py  test_classifier.py  test_cli_config.py  test_cli_doctor.py  test_cli_first_run.py  test_cli_service.py  test_cli_verify.py  test_codex_rollout.py  test_cole_migration.py  test_command_provider.py  test_consolidation.py  test_contradiction.py  test_cross_client_activation.py  (+56 more)
(+121 files in other folders)
