[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-bridge"
version = "0.12.0"
description = "Two-channel MCP memory for coding agents: durable knowledge plus coordination signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "memory", "agents", "sqlite", "fts", "local-first", "stdio"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp==1.27.0",
]

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0,<7",
  "pytest>=8.3,<9",
]

[project.scripts]
agent-memory-bridge = "agent_mem_bridge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
