[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-bridge"
version = "0.13.1"
description = "Persistent engineering memory for coding agents over MCP"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["mcp", "memory", "agents", "sqlite", "fts", "local-first", "stdio"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp==1.27.0",
]

[project.urls]
Homepage = "https://github.com/zzhang82/Agent-Memory-Bridge"
Repository = "https://github.com/zzhang82/Agent-Memory-Bridge"
Issues = "https://github.com/zzhang82/Agent-Memory-Bridge/issues"
Documentation = "https://github.com/zzhang82/Agent-Memory-Bridge#readme"

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0,<7",
  "pytest>=8.3,<9",
]

[project.scripts]
agent-memory-bridge = "agent_mem_bridge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
